Locked advisor block height to fix misalignment.

--- a/src/public/stylesheets/home.less
+++ b/src/public/stylesheets/home.less
@@ -78,7 +78,7 @@
     }
 
     @media @layout-twoColumn {
-        min-height: 210px;
+        height: 220px;
     }
 }
 .advisorContainer {
